  * The sections about implementing binary operators received an overhaul.

  * The section `Adding binary operators to classes' was rewritten.

  * Added descriptions of operator new[](size) and operator delete[](pointer).

  * The section about lambda-expressions was extended with descriptions of new
    features offered by C++17.

  * The section `Pointer sizes' in the chapter about pointers to members
    contains an explanation as to why pointers to members are larger than
    ordinary pointers.

  * Added preview intro/cpp17.yo on the next C++17 standard.

  * Added a section about selection statements with initializers to the
    `First Impression Of C++' chapter.

  * Added a paragraph about increment/decrement operators being deprecated for
    bool type of variables to overloading/increment.yo.

  * Added a section about std::exchange to the Generic Algorithms chapter.

  * Added a section about `if constexpr' to the Function Templates chapter.

  * Added a section about folding expressions to the Class Templates chapter.

  * The section about using non-default constructors now contains thread-safe
    examples. 

  * Fixed several typos.

C++-annotations (10.6.0)

  * Added new section (Lvalues, rvalues and more, first/lvalues.yo) about
    various kinds of l/rvalues distinguished by C++.

  * Added new section (Standard Exceptions: to use or not to use?,
    exceptions/usestandard.yo) about the distinction between standard and
    non-standard exceptions.

  * Section 'Allocating arrays' (in chapter 'Classes and Memory Allocation')
    now describes how to initialize memory using the 'new Type[size]()'
    syntax. 

  * Section 'explicit conversion operators' (in chapter 'More Operator
    Overloading) received an overhaul.

  * Changed uses of shared_ptr objects to unique_ptr objects in
    stl/uniqueptr.yo. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 30 Oct 2016 10:25:03 +0100

C++-annotations (10.5.1)
