@@ -1,2 +1,2 @@
-SUBST(DOCVERSION)(10.6.0)
-SUBST(YEARS)(1994 - 2016)
+SUBST(DOCVERSION)(10.7.0)
+SUBST(YEARS)(1994 - 2017)
