@@ -1,3 +1,5 @@
+C++-annotations (10.7.0)
+
   * The sections about implementing binary operators received an overhaul.
 
   * The section `Adding binary operators to classes' was rewritten.
@@ -25,10 +27,14 @@
 
   * Added a section about folding expressions to the Class Templates chapter.
 
+  * Added a section about class templates template argument deduction.
+
   * The section about using non-default constructors now contains thread-safe
     examples. 
 
-  * Fixed several typos.
+  * Fixed several typos, processed several suggestions received from readers.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 28 Jan 2017 13:05:50 +0100
 
 C++-annotations (10.6.0)
 
